update mpv for 0.39

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -2,9 +2,11 @@
 osc=no
 hwdec=auto
 #toggling border=no increases mpv cpu usage by 4x (not anymore?) still toglling fullscreen is laggy
-#border=no 
+#border=no
 #keep-open=yes
 keepaspect-window=no
+#mpv >= 0.39
+autocreate-playlist=same
 
 
 
