--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -250,10 +250,10 @@ bindl =, XF86MonBrightnessUp, exec, brightnessctl s +10%
 bindl =, XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 # install ttf-font-awesome 6.xx
-bind = $mod, X, exec, nwg-bar
+bind = $mod, X, exec, nwg-bar -t ~/.config/nwg-bar/bar-hypr.json
 
 #Hide waybar, clear clipboard history as well as clipboard.
-bind = $mod, B, exec, killall -SIGUSR1 waybar && rm -fr ~/.cache/cliphist && wl-copy --clear
+bind = $mod, B, exec, killall -SIGUSR1 waybar && cliphist wipe && wl-copy --clear
 
 #scripts
 bind = $mod, P, exec, ~/.config/sway/wallpaper.sh -w
